# vzlogger

./: CMakeLists.txt  config.hpp.in
etc/: vzlogger.conf
include/: Options.hpp
include/protocols/: MeterOCR.hpp
src/: CMakeLists.txt  Config_Options.cpp  Meter.cpp  Options.cpp  Reading.cpp
src/protocols/: CMakeLists.txt  MeterD0.cpp  MeterOCR.cpp
tests/: CMakeLists.txt  MeterD0.cpp  ut_MeterOCR.cpp
